--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Olanrewaju David <davidolanrewaju538@gmail.com>
-Musana Yusuf
+Musana Yusuf <musanayusuf95@gmail.com>
